--- a/sprint3/client/src/styles/partials/_header.scss
+++ b/sprint3/client/src/styles/partials/_header.scss
@@ -55,6 +55,9 @@ header {
     .searchForm__input {
       //Select container
       width: 100%;
+              &:active {
+          border-color: $BLUE;
+        }
       &__control {
         //Select dropdown
         height: $item-heights;
@@ -62,15 +65,15 @@ header {
         background: url("../assets/Icons/SVG/Icon-search.svg") no-repeat
           $ALABASTER;
         background-size: $search-img-size;
-        background-position: calc(3% + 5px) 50%;
-        text-indent: calc(#{$search-img-size} + 8px + 3%);
-
+        background-position: 16px 50%;
+        
         border: 1px $MERCURY solid;
         border-radius: 4px;
         box-sizing: border-box;
         font-family: AvenirNext;
         font-size: 14px;
         line-height: 18px;
+        text-indent: calc(#{$search-img-size} + 12px + 3%);
         &:active {
           border-color: $BLUE;
         }
@@ -81,6 +84,10 @@ header {
 
       &__single-value {
         width: 100%;
+      }
+
+      &__input{
+        text-indent: 0px;
       }
     }
 
