--- a/sprint3/client/src/styles/partials/_upload.scss
+++ b/sprint3/client/src/styles/partials/_upload.scss
@@ -173,7 +173,6 @@ h1 {
       margin-right: 24px;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
       flex-basis: 45%;
     }
     .thumbnail__image {
